k8s/ml-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ml
spec:
  selector:
    app: ml
  ports:
    - port: 8000
      targetPort: 8000
